starring licks during play

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -449,10 +449,8 @@
   - March 29, 1951 - November 2, 1996
   - American blues harmonica player and singer
   notes:
-  - '"one of the best harp players out there,"'
-  - '"with maybe the biggest tone,"'
-  - '"a bluesman with as much soul and swing in his music"'
-  - (quote Dick Shurman, blues writer)
+  - Clarke was a master of both cross and chromatic harmonica
+  - styles and many consider him among the blues harmonica greats
   - Played regularly with George "Harmonica" Smith
   source: https://en.wikipedia.org/wiki/William_Clarke_(musician)
   songs:
