--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -536,7 +536,8 @@
   songs:
   - Sonic Breakdown
   - On the Move
-  - Kick Myself
+  - I like a woman
+  - Amazing Grace
 
 - name: Magic Dick
   bio:
