More details on Howling Wolf

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -172,8 +172,11 @@
   - Inducted in the Blues Hall of Fame in 1980
   - and the Rock and Roll Hall of Fame in 1991
   notes:
-  - Regarded as one of the most influential blues musicians of all time
-  - Known for his booming voice and imposing physical presence
+  - Learned from Charley Patton and Sonny Boy Williamson II
+  - Known for his booming voice and physical presence at 6 ft, 6 in
+  - One of the most influential blues musicians of all time
+  - Had a pioneering electric blues Band in Memphis
+  - Played with Son House, had a show on KWEM radio station
   source: https://en.wikipedia.org/wiki/Howlin%27_Wolf
   songs:
   - Smokestack Lightning
