--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -16,7 +16,9 @@ play:
   progression, prog: |
     take a base and some semitone diffs, then play it in a loop,
     allowing e.g. to shift each iteration by some semitones e.g.
-    through a chord-progression of i-iv-v
+    through a chord-progression of i-iv-v. Moreover you may specify
+    two or more progressions with a dot (.) between; those can then
+    be switched for each iteration.
   chord: |
     play the given holes or notes simultanously as a chord
   user: |
