new players Milteau and Gruenling

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -567,3 +567,44 @@
   songs:
   - Going Up the Country
   - On the Road Again
+
+- name: Jean-Jacques Milteau
+  bio:
+  - April 17, 1950 -
+  - French harmonica player and composer
+  notes:
+  - Played with Yves Montand, Eddy Mitchell,
+  - Charles Aznavour and others
+  - Received the award Victoires de la musique (best blues album)
+  - in 2001 and the Sacem Grand Prix du Jazz in 2003
+  - Plays in the genres of Blues, Bluegrass and Jazz
+  - Plays with Mighty Mo Rodgers as well as with Greg Zlap
+  - Toured more than 60 countries together with Manu Galvin
+  source:
+  - https://fr.wikipedia.org/wiki/Jean-Jacques_Milteau
+  songs:
+  - Beaumont Lafayette
+  - Junior Parker
+  - Midnight Special
+
+- name: Dennis Gruenling
+  bio:
+  - July 22, Year unknown (but was underage 1990) -
+  - American electric blues harmonicist, songwriter,
+  - record producer and radio DJ
+  notes:
+  - Has been awarded the title of 'Best Modern Blues Harmonica Player'
+  - three years in a row by Real Blues magazine
+  - Inspired by Little Walter, Lester Young and Illinois Jacquet
+  - Jammed with Snooky Pryor, Homesick James,
+  - Pinetop Perkins, A.C. Reed
+  - Customizes bullet mikes; plays chromatic and diatonic
+  - Featuring in the Nick Moss Band
+  - Won a Blues Music Award for 'Instrumentalist - Harmonica' in 2019
+  source:
+  - https://en.wikipedia.org/wiki/Dennis_Gruenling
+  - https://www.dennisgruenling.com/bio
+  songs:
+  - Stockyard Blues
+  - Missing Person
+  - True Love
