step through scale-progression; custom keys tab and return

--- a/config/config.ini
+++ b/config/config.ini
@@ -89,6 +89,10 @@
   drop_tags_any = 
 
 [listen]
+  # Maybe translate the keys RETURN or TAB once and for all ? See the
+  # corresponding commandline-option for details (invoke with -o)
+  # ret_is = s
+  # tab_is = s
 
 [quiz]
   comment = holes-some
@@ -98,6 +102,9 @@
 [licks]
   comment = holes-all
   immediate = true
+  # Maybe translate the key TAB once and for all ? See the
+  # corresponding commandline-option for details (invoke with -o)
+  # tab_is = s
 
 #
 # Nothing special for these two modes, so see [any-mode], e.g. for tags
