--- a/config/config.ini
+++ b/config/config.ini
@@ -89,10 +89,9 @@
   drop_tags_any = 
 
 [listen]
-  # Maybe translate the keys RETURN or TAB once and for all ? See the
+  # Maybe translate the keys RETURN or TAB ? See the
   # corresponding commandline-option for details (invoke with -o)
-  # ret_is = s
-  # tab_is = s
+  # keyboard_translate = TAB=s,RETURN=s
 
 [quiz]
   comment = holes-some
@@ -102,9 +101,9 @@
 [licks]
   comment = holes-all
   immediate = true
-  # Maybe translate the key TAB once and for all ? See the
-  # corresponding commandline-option for details (invoke with -o)
-  # tab_is = s
+  # Maybe translate the key TAB ? See the corresponding
+  # commandline-option for details (invoke with -o)
+  # keyboard_translate = TAB=s
 
 #
 # Nothing special for these two modes, so see [any-mode], e.g. for tags
