--- a/config/richter/scale_progressions.yaml
+++ b/config/richter/scale_progressions.yaml
@@ -8,6 +8,16 @@
     - "chord-v7"
     - "chord-iv7"
     - "chord-i7"
+12bar-v:
+    desc: standard 12-bar blues progression, based on flat-7th chords plus extra v-chord at the end
+    chords:
+    - "chord-i7"
+    - "chord-iv7"
+    - "chord-i7"
+    - "chord-v7"
+    - "chord-iv7"
+    - "chord-i7"
+    - "chord-v7"
 12bar-om3:
     desc: standard 12-bar blues progression, based on flat-7th chords but with major thirds ommitted
     chords:
@@ -17,4 +27,14 @@
     - "chord-v7om3"
     - "chord-iv7om3"
     - "chord-i7om3"
+12bar-om3-v:
+    desc: standard 12-bar blues progression, based on flat-7th chords but with major thirds ommitted plus extra v-chord at the end
+    chords:
+    - "chord-i7om3"
+    - "chord-iv7om3"
+    - "chord-i7om3"
+    - "chord-v7om3"
+    - "chord-iv7om3"
+    - "chord-i7om3"
+    - "chord-v7om3"
     
