--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -42,7 +42,9 @@ print:
   licks-starred: |
     show all starred licks
   lick-progs, lick-progressions: |
-    print all known lick progressions
+    print all known lick progressions. These can be narrowed by giving
+    option -t (this is the only case, where this option applies to lick 
+    progressions instead of licks).
   licks-dump: |
     dump all selected licks in json-format
   holes-history: |
