Slots for keyboard-translations

--- a/config/config.ini
+++ b/config/config.ini
@@ -92,7 +92,12 @@
   # Maybe translate the keys RETURN or TAB ? See the
   # corresponding commandline-option for details (invoke with -o)
   # keyboard_translate = TAB=s,RETURN=s
-
+  #
+  # there are also three slots (1,2,3) for stored keyboard
+  # translations, e.g.:
+  # keyboard_translate_1 = RIGHT=s,RIGHT=l,UP=S,UP=L,LEFT=ALT-s,LEFT=ALT-l
+  # this may then be used on the commandline like this:
+  # --kb-tr 1
 [quiz]
   comment = holes-some
   # see option --difficulty for more details on this
@@ -104,6 +109,8 @@
   # Maybe translate the key TAB ? See the corresponding
   # commandline-option for details (invoke with -o)
   # keyboard_translate = TAB=s
+
+  # See above for an explanation of keyboard_translate_1 etc.
 
 #
 # Nothing special for these two modes, so see [any-mode], e.g. for tags
