--- a/config/config.ini
+++ b/config/config.ini
@@ -95,9 +95,9 @@
   #
   # there are also three slots (1,2,3) for stored keyboard
   # translations, e.g.:
-  # keyboard_translate_1 = RIGHT=s,RIGHT=l,UP=S,UP=L,LEFT=ALT-s,LEFT=ALT-l
+  # keyboard_translate_slot1 = RIGHT=s,RIGHT=l,UP=S,UP=L,LEFT=ALT-s,LEFT=ALT-l
   # this may then be used on the commandline like this:
-  # --kb-tr 1
+  # '--keyboard-translate slot1' or shorter '--kb-tr s1'
 [quiz]
   comment = holes-some
   # see option --difficulty for more details on this
@@ -110,7 +110,7 @@
   # commandline-option for details (invoke with -o)
   # keyboard_translate = TAB=s
 
-  # See above for an explanation of keyboard_translate_1 etc.
+  # See above for an explanation of keyboard_translate_slot1 etc.
 
 #
 # Nothing special for these two modes, so see [any-mode], e.g. for tags
