Tweaking --kb-tr; hwh with better sort

--- a/config/config.ini
+++ b/config/config.ini
@@ -95,7 +95,7 @@
   #
   # there are also three slots (1,2,3) for stored keyboard
   # translations, e.g.:
-  # keyboard_translate_slot1 = RIGHT=s,RIGHT=l,UP=S,UP=L,LEFT=ALT-s,LEFT=ALT-l
+  # keyboard_translate_slot1 = RIGHT=s+l,UP=S+L,LEFT=ALT-s+ALT-l
   # this may then be used on the commandline like this:
   # '--keyboard-translate slot1' or shorter '--kb-tr s1'
 [quiz]
