--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -86,14 +86,20 @@ tools:
     print chords i, iv and v for current key
   transcribe: |
     transcribe given audio-file approximately
-  search-in-licks: |
-    search given sequence of holes (or equiv) among licks; the same
-    ordering of holes is required
-  search-in-scales: |
-    search given lick or sequence of holes (or equiv) among scales;
-    ordering of holes is not important
-  search-scale-in-licks: |
-    search given scale in all licks (selected e.g. by -t)
+  search-holes-in-licks: |
+    search given sequence of holes (or equiv) in all licks; the same
+    ordering of holes is required; this can help to find licks that
+    expand on a given sequence of holes
+  search-lick-in-scales: |
+    search given lick or sequence of holes (or equiv) in all scales;
+    ordering of holes is not important; this may give an idea, to
+    which of all scales a given lick can be played
+  licks-from-scale: |
+    For all licks, check if all their holes are taken from the given
+    scale. Also (for each lick), try if removing any single hole or
+    any two holes, leaves only holes from the scale. This may give an
+    idea, which of all licks can be played over the given scale
+    (e.g. chord-i or blues)
   edit-licks: |
     invoke editor on your lickfile 
   edit-config: |
