--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -95,9 +95,8 @@ tools:
     ordering of holes is not important; this may give an idea, to
     which of all scales a given lick can be played
   licks-from-scale: |
-    For all licks, check if all their holes are taken from the given
-    scale. Also (for each lick), try if removing any single hole or
-    any two holes, leaves only holes from the scale. This may give an
+    For all licks, find percentage of holes, that are taken from the
+    given scale and group and sort them accordingly.  This may give an
     idea, which of all licks can be played over the given scale
     (e.g. chord-i or blues)
   edit-licks: |
