New Player R J Mischo

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -608,3 +608,24 @@
   - Stockyard Blues
   - Missing Person
   - True Love
+
+- name: R J Mischo
+  bio:
+  - March 18, 1960 -
+  - Born in Chilton, Wisconsin
+  - American electric blues harmonicist, singer, songwriter
+  - and record producer
+  notes:
+  - Was the youngest of four brothers, all of whom were proficient
+  - in a musical instrument
+  - Began playing the harmonica aged nine and ten
+  - Played with Percy Strother, Milwaukee Slim, Sonny Rogers,
+  - 'George "Mojo" Buford, and Lazy Bill Lucas'
+  - AllMusic noted "R.J. Mischo resurrects the glory days
+  - "of '50s Chicago harp-playing..."
+  source:
+  - https://en.wikipedia.org/wiki/R.J._Mischo
+  songs:
+  - Telephone Blues
+  - Got My Passport
+  - She's My Baby
