--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -124,6 +124,10 @@
   - April 20, 1958 - September 23, 2007
   - American blues harmonica player, singer, guitarist and songwriter
   notes:
+  - His Album Mr. Freeze was named as on of the 20 best blues albums
+  - of the 1990s
+  - Recorded with Steve James, Nick Curran, Jimmie Vaughan
+  - and many others
   - "Released an instructional double CD, Blues Harmonica:"
   - The Blues And Beyond
   source: https://en.wikipedia.org/wiki/Gary_Primich
